@@ -1,6 +1,6 @@
 SPRING WEB FLOW (SWF) CHANGELOG
 ===============================
-http://www.springframework.org
+http://www.springframework.org/webflow
 
 Changes in version 1.1.0 ()
 -------------------------------------
@@ -9,6 +9,7 @@ Package org.springframework.binding
 * Fixed serializability problems in ConversionException, EvaluationException and MethodInvocationException.
 * Added targetCollection(String) method to MappingBuilder.
 * ConversionExecutor now checks for assignment compatible types (SWF-337).
+* Fixed bug in MapAccessor where accessing a map entry with a null value would result in an exception (SWF-343).
 
 Package org.springframework.webflow.action
 * Improved FormAction.setupForm() JavaDoc (SWF-325).
@@ -44,9 +45,11 @@ Package org.springframework.webflow.engine
   methods to XmlFlowBuilder to allow for control over the registration of beans needed locally by a flow definition.
   Useful for testing (SWF-307).
 * Ensures that all exceptions (including RuntimeExceptions) are handled properly by the FlowExecution (SWF-333).
+* Ensured the RequestContext attribute map can never be null (SWF-347).
 
 Package org.springframework.webflow.execution
 * Added a holder for the FlowExecutionContext of a request (SWF-163).
+* Made the Event class non-final to allow for extension (SWF-330).
 
 Package org.springframework.webflow.executor
 * JSF integration code now manages flow execution locks properly in exceptional situations and when the
